<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pallete_1"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="240dp"
        android:layout_marginTop="32dp"
        android:src="@drawable/removedbg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Username"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_user_24"
            android:layout_marginBottom="8dp"
            app:helperText="Input your Username"
            app:helperTextTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/inputLayoutPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Password"
            app:boxBackgroundColor="@color/white"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_lock_24"
            app:helperText="Input your Password"
            app:helperTextTextColor="@color/white">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"/>

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@id/linearLayout2"
        app:layout_constraintTop_toBottomOf="@id/linearLayout2">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClear"
            android:layout_width="85dp"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFE135"
            android:layout_marginEnd="5dp"
            android:layout_weight="1"
            android:text="Clear Input"
            android:textColor="#000000"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#964B00"
            android:layout_marginStart="5dp"
            android:layout_weight="1"
            android:text="Login"
            android:textColor="@color/black"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout1"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@id/linearLayout1"
        app:layout_constraintTop_toBottomOf="@id/linearLayout1">

        <TextView
            android:id="@+id/regisComment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="Don't have an account ? Click here to"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textStyle="italic"
            app:layout_constraintEnd_toStartOf="@+id/btnRegis"
            app:layout_constraintStart_toStartOf="parent"
            tools:layout_editor_absoluteY="645dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRegis"
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:layout_width="71dp"
            android:layout_height="wrap_content"
            android:text="Sign-up"
            android:textColor="@color/white"
            android:textSize="12dp"
            android:textStyle="italic"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.866"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout1"
            app:layout_constraintVertical_bias="0.133" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
