<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registerLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:background="@color/pallete_1">

    <TextView
        android:id="@+id/titleRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Registration"
        android:textSize="30dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.096"
        />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/titleRegister"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"

        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerLayoutUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Username"
            app:errorEnabled="true"
            app:boxBackgroundColor="@color/white"
            app:startIconDrawable="@drawable/ic_user_24"
            app:helperTextTextColor="@color/white"
            app:helperText="Masukkan Username Anda"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerLayoutPassword"
            android:layout_width="match_parent"
            app:boxBackgroundColor="@color/white"
            android:layout_height="wrap_content"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="Password"
            app:errorEnabled="true"
            app:helperTextTextColor="@color/white"
            app:startIconDrawable="@drawable/ic_lock_24"
            app:helperText="Masukkan Password Anda">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerLayoutTanggalLahir"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="dd/mm/xxxx"
            app:helperTextTextColor="@color/white"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_date_24"
            app:helperText="Masukkan Tanggal Lahir Anda">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="example@students.uajy.ac.id"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_email_24"
            app:helperTextTextColor="@color/white"
            app:helperText="Masukkan Email Anda">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/registerLayoutNoTelp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxBackgroundColor="@color/white"
            app:helperTextTextColor="@color/white"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:hint="6289xxxxxxxxx"
            app:errorEnabled="true"
            app:startIconDrawable="@drawable/ic_phone_24"
            app:helperText="Masukkan Nomor Telepon Anda">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/linearLayout"
        app:layout_constraintStart_toStartOf="@+id/linearLayout"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <com.google.android.material.button.MaterialButton
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btnRegister"
            android:text="Register"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>